<resources>

    <string name="app_name">Fortnite Tracker</string>

    <!-- Strings for Main Activity -->
    <string name="hint">Enter a username...</string>
    <string name="solo">Solo</string>
    <string name="duo">Duo</string>
    <string name="squad">Squad</string>
    <string name="last_searches">Last 5 Searches:</string>

    <!-- Strings for Menu Buttons -->
    <string name="action_share">Share</string>
    <string name="action_view_online">View stats on FortniteTracker</string>

    <!-- Strings for Share Option -->
    <string name="share_app_choose_titlebar">Choose an app to share your stats!...</string>
    <string name="share_text_prefix">Think you can match this?</string>

    <!-- Strings for Stats Activity -->
    <string name="username">Player:</string>
    <string name="score">Score:</string>
    <string name="kills">Kills:</string>
    <string name="num_matches">Matches:</string>
    <string name="wins">Wins:</string>
    <string name="kill_death">K/D:</string>
    <string name="win_percent">Win %:</string>
    <string name="time_played">Time Played:</string>
    <string name="kills_per_min">K/PMin:</string>
    <string name="kills_per_match">K/PMatch:</string>
    <string name="avg_match_time">Avg Match Time:</string>
    <string name="score_per_match">Score Per Match:</string>



</resources>
