<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/ll_header_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#2A2A2A"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight=".3">

        <LinearLayout
            android:id="@+id/ll_header_player_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_player_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/username"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shroud"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_game_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_solo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/solo"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_duo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/duo"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_squad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25sp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/squad"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight=".7">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25">

            <LinearLayout
                android:id="@+id/ll_stat_time_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingVertical="3dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="#7255"
                android:layout_weight=".5">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_time_played_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_played"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_time_played"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20h, 10s"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_avg_match_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/avg_match_time"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_avg_match_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5m, 10s"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_stat_win_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="5dp"
                android:background="#348F"
                android:layout_weight=".5">

                <LinearLayout
                    android:id="@+id/ll_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight=".5">

                        <TextView
                            android:id="@+id/tv_score_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2.43"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight=".5">

                        <TextView
                            android:id="@+id/tv_win_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wins"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_wins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_win_percent_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/win_percent"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_win_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:background="#7544"
            android:orientation="horizontal"
            android:layout_weight=".2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="3dp"
                android:layout_weight=".25">

                <TextView
                    android:id="@+id/tv_kills_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kills"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1025"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight=".25">

                <TextView
                    android:id="@+id/tv_kill_death_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kill_death"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_kill_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.34"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight=".25">

                <TextView
                    android:id="@+id/tv_kpmin_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kills_per_min"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_kpmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.25"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight=".25">

                <TextView
                    android:id="@+id/tv_kpmatch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kills_per_match"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_kpmatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12.01"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="#7552"
            android:layout_weight=".2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="3dp">

                <TextView
                    android:id="@+id/tv_score_per_match_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_per_match"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_score_per_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5,210"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>